--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
 sudo: false
-install: gem install jekyll html-proofer
+install: bundle install
 script: bundle exec jekyll build
 deploy:
   provider: azure_web_apps
