--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,15 @@ env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
 sudo: false
-install: bundle install
-script: bundle exec jekyll build
+branches:
+  only:
+  - master
+install:
+- bundle install
+script:
+- bundle exec jekyll build
+- timeout 120s bundle exec htmlproofer ./_site --check-html --check-favicon --allow-hash-href --external_only --only-4xx --http-status-ignore 429
 deploy:
   provider: azure_web_apps
+  skip_cleanup: true
+  local_dir: _site
