--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 script:
 - bundle exec jekyll build
 - timeout 120s bundle exec htmlproofer ./_site --check-html --check-favicon --allow-hash-href --external_only --only-4xx --http-status-ignore 429
+before_deploy: cd _site
 deploy:
   provider: azure_web_apps
   skip_cleanup: true
-  project: ./_site/
