--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,13 @@ branches:
   - master
 install:
 - bundle install
-script:
-- bundle exec jekyll build
-- timeout 120s bundle exec htmlproofer ./_site --check-html --check-favicon --allow-hash-href --external_only --only-4xx --http-status-ignore 429
-deploy:
-  provider: azure_web_apps
-  skip_cleanup: true
-  verbose: true
+- chmod +x ./scripts/build.sh
+- ./scripts/build.sh
+script: true
+# - bundle exec jekyll build
+# - timeout 120s bundle exec htmlproofer ./_site --check-html --check-favicon --allow-hash-href --external_only --only-4xx --http-status-ignore 429
+
+# deploy:
+#   provider: azure_web_apps
+#   skip_cleanup: true
+#   verbose: true
