--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,5 @@ deploy:
   access_key_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['S3_SECRET_ACCESS_KEY'] %>
   bucket: "tucla"
+  skip_cleanup: true
+  local_dir: _site
