--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,4 @@ script:
 - bundle exec jekyll build
 - timeout 120s bundle exec htmlproofer ./_site --check-html --check-favicon --allow-hash-href
   --external_only --only-4xx --http-status-ignore 429
+after_success: bundle exec s3_website push --headless
