--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,11 @@ script:
 - bundle exec jekyll build
 - timeout 120s bundle exec htmlproofer ./_site --check-html --check-favicon --allow-hash-href
   --external_only --only-4xx --http-status-ignore 429
-after_success: bundle exec s3_website push
+#after_success: bundle exec s3_website push
+deploy:
+  provider: s3
+  access_key_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['S3_SECRET_KEY'] %>
+  bucket: "tucla"
+  skip_cleanup: true
+  local_dir: _site
