--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ install:
 - bundle install
 script:
 - bundle exec jekyll build
-- timeout 120s bundle exec htmlproofer ./_site --check-html --check-favicon --allow-hash-href
-  --external_only --only-4xx --http-status-ignore 429
+- timeout 120s bundle exec htmlproofer ./_site --check-html --check-favicon --allow-hash-href --external_only --only-4xx --http-status-ignore 429
 deploy:
   provider: s3
   access_key_id:
@@ -23,3 +22,4 @@ deploy:
   bucket: tucla
   skip_cleanup: true
   local_dir: _site
+  upload-dir: blog
